syntax = "proto3";

package ai;

option go_package = "douyin-mall/proto/ai";

// AI 服务接口定义
service AIService {
    // 查询：用自然语言查询订单、商品等信息
    rpc Query(QueryReq) returns (QueryResp);
    // 自动下单：根据用户描述自动选择商品并下单
    rpc AutoPlaceOrder(AutoOrderReq) returns (AutoOrderResp);
}

// 订单查询请求
message QueryOrderReq {
  uint32 user_id = 1;    // 用户ID
  string query = 2;      // 查询内容
}

// 订单查询响应
message QueryOrderResp {
  string answer = 1;     // AI回答内容
}

// 自动下单请求
message AutoOrderReq {
  uint32 user_id = 1;    // 用户ID
  string description = 2; // 商品描述
}

// 自动下单响应
message AutoOrderResp {
  string order_id = 1;   // 创建的订单ID
}
